--- a/eps_lar8/public/css/AdminLTE.css
+++ b/eps_lar8/public/css/AdminLTE.css
@@ -28,7 +28,7 @@ body {
 }
 /* Layout */
 .wrapper {
-  min-height: 100%;
+  height: 100%;
   position: static;
   overflow: hidden;
 }
@@ -66,6 +66,43 @@ body {
   transition: margin-left 0.3s cubic-bezier(0.32, 1.25, 0.375, 1.15);
   margin-left: 230px;
   z-index: 820;
+}
+/* CSS untuk efek perpindahan */
+@keyframes fadeEffect {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+.box-title.active {
+  color: #ffd700;
+}
+
+.login, .daftar {
+  animation: fadeEffect 0.5s ease;
+}
+
+.horizontal-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.horizontal-list li {
+  display: inline;
+}
+
+.separator {
+  margin: 0 5px; /* Mengatur jarak antara simbol "|" dan teks */
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: #323334;
+  text-align: left;
+  padding: 10px 0;
+  margin-left: 40px;
 }
 .layout-top-nav .content-wrapper,
 .layout-top-nav .right-side,
@@ -255,7 +292,26 @@ a:focus {
     border: 0;
   }
 }
-.main-header .sidebar-toggle {
+.navbar-custom-menu {
+  float: right;
+}
+
+.notif{
+  float: right;
+  background-color: transparent;
+  background-image: none;
+  
+}
+.notif a {
+  margin-left: 10px;
+  padding: 20px 10px;
+  font-family: fontAwesome;
+}
+.notif a:hover {
+  background-color: #fff; /* Warna latar belakang ketika dihover */
+  cursor: pointer; /* Ubah kursor menjadi pointer saat dihover */
+}
+.main-header .sidebar-toggle{
   float: left;
   background-color: transparent;
   background-image: none;
@@ -265,7 +321,7 @@ a:focus {
 .main-header .sidebar-toggle:before {
   content: "\f0c9";
 }
-.main-header .sidebar-toggle:hover {
+.main-header .sidebar-toggle:hover{
   color: #fff;
 }
 .main-header .sidebar-toggle .icon-bar {
@@ -285,6 +341,11 @@ a:focus {
   padding: 2px 3px;
   line-height: .9;
 }
+.logoimage{
+  width: 210px;
+  margin-bottom: 12px;
+}
+
 .main-header .logo {
   display: block;
   float: left;
@@ -397,6 +458,45 @@ a:focus {
  * Component: Sidebar
  * ------------------
  */
+
+
+ .main-sidebars {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 20px;
+  height: 100%;
+  width: 230px;
+  z-index: 810;
+  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.32, 1.25, 0.375, 1.15);
+  -moz-transition: -moz-transform 0.3s cubic-bezier(0.32, 1.25, 0.375, 1.15);
+  -o-transition: -o-transform 0.3s cubic-bezier(0.32, 1.25, 0.375, 1.15);
+  transition: transform 0.3s cubic-bezier(0.32, 1.25, 0.375, 1.15);
+  background-color: #d2d6de;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+.main-topbars {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 80%;
+  height: 10%;
+  background-color: #d2d6de;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000; 
+  border-top-left-radius: 30px; 
+  border-bottom-left-radius: 30px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+.logo-topbar > img{
+  width: 65px;
+}
+
+
+
 .main-sidebar,
 .left-side {
   position: absolute;
@@ -438,6 +538,67 @@ a:focus {
     transform: translate(0, 0);
   }
 }
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 25px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 24px;
+  width: 22px;
+  left: 1px;
+  bottom: 1px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
 .sidebar {
   padding-bottom: 10px;
 }
@@ -448,6 +609,41 @@ a:focus {
 .sidebar-form input:focus {
   border-color: transparent!important;
 }
+.list-sidebar > a{
+  color: #000;
+}
+
+.seller-balance{
+  padding: 5px;
+  margin-top: -20px;
+  margin-bottom: -20px;
+}
+.seller-balance > .info {
+  font-weight: 600;
+  padding: 5px 5px 5px 15px;
+  font-size: 14px;
+  line-height: 1;
+  color:#eee ;
+}
+.seller-balance > .info > p {
+  margin-bottom: 2px;
+}
+.seller-balance > .info > a {
+  text-decoration: none;
+  padding-right: 5px;
+  margin-top: 0px;
+  font-size: 11px;
+  font-weight: normal;
+}
+.seller-balance > .info > a > .fa,
+.seller-balance > .info > a > .ion,
+.seller-balance > .info > a > .glyphicon {
+  margin-right: 3px;
+}
+.seller_type > img{
+width: 30px;
+}
+
 .user-panel {
   padding: 10px;
 }
@@ -1179,6 +1375,7 @@ a:focus {
 }
 .box.box-warning {
   border-top-color: #f39c12;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 .box.box-success {
   border-top-color: #00a65a;
@@ -1514,6 +1711,11 @@ a:focus {
 }
 .todo-list > li.done {
   color: #999;
+}
+hr {
+  border: 0; /* Menghapus garis bawaan */
+  height: 1px; /* Mengatur tinggi */
+  background-color: black; /* Warna latar belakang */
 }
 .todo-list > li.done .text {
   text-decoration: line-through;
@@ -2741,6 +2943,14 @@ table.text-center th {
   text-align: center;
   margin-bottom: 25px;
   font-weight: 300;
+}
+.logologin{
+  width: 220px;
+}
+.logo-login{
+  display: flex;
+  justify-content: center; /* Menengahkan secara horizontal */
+  align-items: center; /* Menengahkan secara vertikal */
 }
 .login-logo a,
 .register-logo a {
