--- a/eps_lar8/public/css/AdminLTE.css
+++ b/eps_lar8/public/css/AdminLTE.css
@@ -21,7 +21,8 @@
 html,
 body {
   min-height: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', 'sans-serif';
+  font-size: 16px;
 }
 
 /* Kotak */
