Cart dan profile untuk alamat

--- a/eps_lar8/public/css/profile.css
+++ b/eps_lar8/public/css/profile.css
@@ -269,7 +269,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.btn-primary:hover, .btn-warning:hover {
+.btn-primary:hover, .btn-warning:hover, .btn-danger:hover, .btn-info:hover {
     background-color: var(--hover-color);
     transform: translateY(-2px);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -658,6 +658,7 @@ body {
 .summary-item {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 10px;
 }
 
@@ -667,6 +668,11 @@ body {
     border-top: 1px solid #ddd;
     padding-top: 10px;
     margin-top: 10px;
+}
+
+.summary-item .value{
+    text-align: right;
+    margin-right: 20px;
 }
 
 .buyer-note {
