--- a/eps_lar8/public/css/Member.css
+++ b/eps_lar8/public/css/Member.css
@@ -283,6 +283,20 @@ main {
     flex-shrink: 0;
 }
 
+.nama-seller-cart {
+    color: var(--primary-color);
+    font-weight: bold;
+    font-size: large;
+}
+
+.material-icons.check-box {
+    color: var(--primary-color); /* Warna untuk checkbox terpilih */
+}
+
+.material-icons.check-box-outline-blank {
+    color: var(--text-color); /* Warna untuk checkbox tidak terpilih */
+}
+
 .nav-btn {
     position: absolute;
     top: 50%;
@@ -1458,8 +1472,15 @@ main {
     border-radius: 8px;
     margin-left: 10px;
     background-color: var(--putih);
-    width: auto;
+    min-width: 320px;
     height: 10%;
+}
+
+.produk-lainnya {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Mengatur elemen di pojok kanan dan kiri */
 }
 
 .seller-detail img {
@@ -2160,6 +2181,7 @@ main {
 
 .product-price-cart {
     margin-left: auto;
+    color: var(--primary-color);
 }
 
 .product-image-cart {
@@ -2224,14 +2246,16 @@ main {
 }
 
 .btn-nego {
-    background-color: #2196f3;
-    color: white;
+    background-color: var(--secondary-color);
+    color: var(--hover-color);
+    border: 1px solid var(--primary-color);
     box-shadow: 0 2px 5px rgba(33, 150, 243, 0.3);
 }
 
 .btn-nego:hover {
-    background-color: #1976d2;
-    box-shadow: 0 4px 8px rgba(33, 150, 243, 0.5);
+    background-color: var(--hover-color);
+    color: var(--secondary-color);
+    box-shadow: 0 4px 8px rgba(19, 35, 48, 0.5);
 }
 
 .btn-hapus {
@@ -2291,7 +2315,7 @@ main {
 .qty-cart-produk {
     display: flex;
     align-items: center;
-    background-color: #f5f5f5;
+    background-color: var(--secondary-color);
     border-radius: 25px;
     padding: 2px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
