--- a/eps_lar8/public/css/Member.css
+++ b/eps_lar8/public/css/Member.css
@@ -578,7 +578,7 @@ main {
     text-align: center;
     background-color: #f0f0f0;
     border-radius: 4px;
-    max-width: 200px;
+    width: 180px;
 }
 
 .stores-section {
